--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.demo-loading {
-  visibility: hidden;
-}
-
-table {
-  font-size: 1em;
-}
-
-.demo-description {
-  clear: both;
-  padding: 12px;
-}
-
-.ui-draggable, .ui-droppable {
-  background-position: top;
-}
-
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
