Troca da cor do Logo

--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -1,9 +1,13 @@
 <mat-toolbar class="mat-elevation-z6 site-toolbar-height">
 
   <mat-toolbar-row>
-    <img src="../../../../assets/img/app/bc_logo_header_footer_01.png" alt="Barcelona Café">
+    <img src="../../../../assets/img/app/bc_logo_header_footer_03.png" alt="Barcelona Café">
     <span class="site-spacer"></span>
-    <mat-icon class="site-icon">account_circle</mat-icon>
+    <button mat-mini-fab color="accent" title="Login">
+      <mat-icon>
+        input
+      </mat-icon>
+    </button>
   </mat-toolbar-row>
 
 </mat-toolbar>
@@ -22,7 +26,7 @@
         <ul class="row">
 
           <li class="social_icons">
-            <button mat-mini-fab color="primary">
+            <button mat-mini-fab color="primary" title="Facebook">
               <mat-icon>
                 <a href="https://www.facebook.com/">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -32,7 +36,7 @@
           </li>
 
           <li class="social_icons">
-            <button mat-mini-fab color="primary">
+            <button mat-mini-fab color="primary" title="Twitter">
               <mat-icon>
                 <a href="https://twitter.com/" target="_blank">
                   <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -42,7 +46,7 @@
           </li>
 
           <li class="social_icons">
-            <button mat-mini-fab color="primary">
+            <button mat-mini-fab color="primary" title="Instagram">
               <mat-icon>
                 <a href="https://www.instagram.com/" target="_blank">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -52,7 +56,7 @@
           </li>
 
           <li class="social_icons">
-            <button mat-mini-fab color="primary">
+            <button mat-mini-fab color="primary" title="Pinterest">
               <mat-icon>
                 <a href="https://www.pinterest.com/" target="_blank">
                   <i class="fa fa-pinterest" aria-hidden="true"></i>
@@ -62,7 +66,7 @@
           </li>
 
           <li class="social_icons">
-            <button mat-mini-fab color="primary">
+            <button mat-mini-fab color="primary" title="Youtube">
               <mat-icon>
                 <a href="https://www.youtube.com/" target="_blank">
                   <i class="fa fa-youtube" aria-hidden="true"></i>
@@ -185,9 +189,9 @@
 
     <div class="pay-group">
       <ul>
-        <li class="pay_icons"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></li>
-        <li class="pay_icons"><i class="fa fa-cc-paypal" aria-hidden="true"></i></li>
-        <li class="pay_icons"><i class="fa fa-cc-visa" aria-hidden="true"></i></li>
+        <li class="pay_icons" title="Mastercard"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></li>
+        <li class="pay_icons" title="PayPal"><i class="fa fa-cc-paypal" aria-hidden="true"></i></li>
+        <li class="pay_icons" title="Visa"><i class="fa fa-cc-visa" aria-hidden="true"></i></li>
       </ul>
     </div>
 
