Erro nos Icones das redes sociais

--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -11,192 +11,241 @@
   </mat-toolbar-row>
 
 </mat-toolbar>
+<!--Carousel Wrapper-->
+<mdb-carousel [isControls]="true" class="carousel slide carousel-fade" [animation]="'fade'">
+  <!--First slide-->
+  <mdb-carousel-item>
+    <div class="view w-100">
+      <img class="d-block w-100" src="../../../../assets/img/app/slide1_2048x811_crop_center.jpg" alt="First slide">
+      <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h3 class="h3-responsive">Bolos personalizados!</h3>
+      <p>Escolha seu preenchimento. Escolha seu favorito.</p>
+    </div>
+  </mdb-carousel-item>
+  <!--/First slide-->
+  <!--Second slide-->
+  <mdb-carousel-item>
+    <div class="view w-100">
+      <img class="d-block w-100" src="../../../../assets/img/app/slide2_2048x811_crop_center.jpg" alt="Second slide">
+      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h3 class="h3-responsive">+55 (62) 3624-5611</h3>
+      <p>Faça seu pedido. Horário: 8:00 - 18:00</p>
+      <div class="up-title"></div>
 
-<mat-toolbar>
+    </div>
+  </mdb-carousel-item>
+  <!--/Second slide-->
+  <!--Third slide-->
+  <mdb-carousel-item>
+    <div class="view w-100">
+      <img class="d-block w-100" src="../../../../assets/img/app/slide3_2048x811_crop_center.jpg" alt="Third slide">
+      <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h3 class="h3-responsive">Visite nosso café</h3>
+      <p>Desfrute de alguns deliciosos petiscos disponíveis apenas no nosso café</p>
+    </div>
+  </mdb-carousel-item>
+  <!--/Third slide-->
+</mdb-carousel>
+<!--/.Carousel Wrapper-->
+<!-- Footer -->
+<footer class="page-footer">
 
-  <mat-toolbar-row class="footer-style-1">
+  <!-- Footer Links -->
+  <div class="container-fluid text-center text-md-left">
 
-    <div class="col-md-4">
-      <a class="footer_logo" href="/">
-        <img src="../../../../assets/img/app/bc_logo_header_footer_02.png" alt="Barcelona Café" width="400">
-      </a>
+    <!-- Grid row -->
+    <div class="row footer-style-1">
 
-      <div class="social-link">
 
-        <ul class="row">
+      <div class="col-md-5 mt-md-0 mt-3">
+        <a class="footer_logo" href="/">
+          <img src="../../../../assets/img/app/bc_logo_header_footer_02.png" alt="Barcelona Café" width="400" class="img-fluid">
+        </a>
 
-          <li class="social_icons">
-            <button mat-mini-fab color="primary" title="Facebook">
-              <mat-icon>
-                <a href="https://www.facebook.com/">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-              </mat-icon>
-            </button>
-          </li>
+        <div class="social-link">
 
-          <li class="social_icons">
-            <button mat-mini-fab color="primary" title="Twitter">
-              <mat-icon>
-                <a href="https://twitter.com/" target="_blank">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-              </mat-icon>
-            </button>
-          </li>
+          <ul class="row">
 
-          <li class="social_icons">
-            <button mat-mini-fab color="primary" title="Instagram">
-              <mat-icon>
-                <a href="https://www.instagram.com/" target="_blank">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-              </mat-icon>
-            </button>
-          </li>
+            <li class="social_icons">
+              <button mat-mini-fab color="primary" title="Facebook">
+                <mat-icon>
+                  <a href="https://www.facebook.com/">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                  </a>
+                </mat-icon>
+              </button>
+            </li>
 
-          <li class="social_icons">
-            <button mat-mini-fab color="primary" title="Pinterest">
-              <mat-icon>
-                <a href="https://www.pinterest.com/" target="_blank">
-                  <i class="fa fa-pinterest" aria-hidden="true"></i>
-                </a>
-              </mat-icon>
-            </button>
-          </li>
+            <li class="social_icons">
+              <button mat-mini-fab color="primary" title="Twitter">
+                <mat-icon>
+                  <a href="https://twitter.com/" target="_blank">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                  </a>
+                </mat-icon>
+              </button>
+            </li>
 
-          <li class="social_icons">
-            <button mat-mini-fab color="primary" title="Youtube">
-              <mat-icon>
-                <a href="https://www.youtube.com/" target="_blank">
-                  <i class="fa fa-youtube" aria-hidden="true"></i>
-                </a>
-              </mat-icon>
-            </button>
-          </li>
+            <li class="social_icons">
+              <button mat-mini-fab color="primary" title="Instagram">
+                <mat-icon>
+                  <a href="https://www.instagram.com/" target="_blank">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                  </a>
+                </mat-icon>
+              </button>
+            </li>
 
-        </ul>
+            <li class="social_icons">
+              <button mat-mini-fab color="primary" title="Pinterest">
+                <mat-icon>
+                  <a href="https://www.pinterest.com/" target="_blank">
+                    <i class="fa fa-pinterest" aria-hidden="true"></i>
+                  </a>
+                </mat-icon>
+              </button>
+            </li>
+
+            <li class="social_icons">
+              <button mat-mini-fab color="primary" title="Youtube">
+                <mat-icon>
+                  <a href="https://www.youtube.com/" target="_blank">
+                    <i class="fa fa-youtube" aria-hidden="true"></i>
+                  </a>
+                </mat-icon>
+              </button>
+            </li>
+
+          </ul>
+
+        </div>
+
+        <div class="text-form">
+          <p>Assine nossa newsletter para se manter<br> atualizado com nossas promoções,<br> descontos, vendas e
+            ofertas especiais.</p>
+        </div>
+
+        <div>
+          <form>
+            <div class="form-group form-margin">
+              <input type="email" class="form-control input-form form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp"
+                     placeholder="Entre seu email">
+            </div>
+            <button class="btn-form" mat-button color="primary" size="sm">INSCREVA-SE</button>
+          </form>
+        </div>
 
       </div>
 
-      <div class="text-form">
-        <p>Assine nossa newsletter para se manter<br> atualizado com nossas promoções,<br> descontos, vendas e
-          ofertas especiais.</p>
+      <div class="col-md-3 mt-md-0 mt-2">
+
+        <div class="footer_item footer_item_links">
+          <h6>INFORMAÇÕES</h6>
+
+          <ul>
+            <li>
+              <a class="dev-for" href="/">Site</a>
+            </li>
+
+            <li>
+              <a class="dev-for" href="#product">Produtos</a>
+            </li>
+
+            <li>
+              <a class="dev-for" href="#about">Sobre nós</a>
+            </li>
+
+            <li>
+              <a class="dev-for" href="#contact">Entre em contato</a>
+            </li>
+
+            <li>
+              <a class="dev-for" href="#search">Procurar</a>
+            </li>
+
+          </ul>
+
+        </div>
+
       </div>
 
-      <div>
-        <form>
-          <div class="form-group form-margin">
-            <input type="email" class="form-control input-form" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entre seu email">
-          </div>
-          <button class="btn-form" mat-button color="primary">INSCREVA-SE</button>
-        </form>
+      <div class="col-md-4 mt-md-0 mt-2">
+
+        <div class="footer_item_contacts">
+          <h6>CONTATOS</h6><br>
+
+          <p>
+            <i class="fa fa-address-book-o fa-2x"></i>
+            <span class="footer_item ">&nbsp;  Endereço: &nbsp; </span>
+            <span>Av. Contorno Sul - Quadra 33 - Lote 3 <br><span>Parque Anhanguera</span><br><span>Goiânia - GO</span></span>
+          </p>
+
+          <p>
+            <i class="fa fa-phone fa-2x"></i>
+            <span class="footer_item "> &nbsp;  Telefone: &nbsp;</span>
+            <span><a class="dev-for" href="tel:+55 62 3624-5611">+55 62 3624-5611</a></span>
+          </p>
+
+          <p>
+            <i class="fa fa-mobile-phone fa-3x"></i>
+            <span class="footer_item ">&nbsp;   Celular: &nbsp;</span>
+            <span><a class="dev-for" href="tel:+55 62 98576-1897">+55 62 98576-1897</a></span>
+          </p>
+
+          <p>
+            <i class="fa fa-clock-o fa-2x"></i>
+            <span class="footer_item ">&nbsp;   Horário de Funcionamento:&nbsp; </span><br>
+            <span class="title">Segunda-feira a sexta-feira:</span>
+            <span>de 6:00hs às 20:00hs</span><br>
+            <span class="title">Sábado:</span>
+            <span>de 6:00hs às 18:00hs</span><br>
+            <span class="title">Domingo e feriádos:</span>
+            <span>de 6:00hs às 12:00hs</span>
+          </p>
+
+          <p>
+            <i class="fa fa-envelope-o fa-2x"></i>
+            <span class="footer_item">&nbsp; E-mail: &nbsp;</span>
+            <span><a class="dev-for" href="mailto:info@demolink.org">contato@barcelonacafe.com.br</a></span>
+          </p>
+
+        </div>
+
+
       </div>
+
+      <div class="clearfix"></div>
 
     </div>
 
-    <div class="col-sm-3">
+  </div>
+  <!-- Grid row -->
+  <div class="footer-style-2 container-fluid">
+    <div class="row">
 
-      <div class="footer_item footer_item_links">
-        <h6>INFORMAÇÕES</h6>
+      <div class="copy">
+        <a class="dev-for" target="_blank" rel="nofollow"
+           href="https://www.cgctec.com.br">Desenvolvido por CGC Tecnologia</a>
+      </div>
 
+      <span class="site-spacer"></span>
+
+      <div class="pay-group">
         <ul>
-          <li>
-            <a class="dev-for" href="/">Site</a>
-          </li>
-
-          <li>
-            <a class="dev-for" href="#product">Produtos</a>
-          </li>
-
-          <li>
-            <a class="dev-for" href="#about">Sobre nós</a>
-          </li>
-
-          <li>
-            <a class="dev-for" href="#contact">Entre em contato</a>
-          </li>
-
-          <li>
-            <a class="dev-for" href="#search">Procurar</a>
-          </li>
-
+          <li class="pay_icons" title="Mastercard"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></li>
+          <li class="pay_icons" title="PayPal"><i class="fa fa-cc-paypal" aria-hidden="true"></i></li>
+          <li class="pay_icons" title="Visa"><i class="fa fa-cc-visa" aria-hidden="true"></i></li>
         </ul>
-
       </div>
 
     </div>
+  </div>
 
-    <div class="col-sm-4">
-
-      <div class="footer_item_contacts">
-        <h6>CONTATOS</h6><br>
-
-        <p>
-          <i class="fa fa-address-book-o fa-2x"></i>
-          <span class="footer_item ">&nbsp;  Endereço: &nbsp; </span>
-          <span>Av. Contorno Sul - Quadra 33 - Lote 3 <br><span>Parque Anhanguera</span><br><span>Goiânia - GO</span></span>
-        </p>
-
-        <p>
-          <i class="fa fa-phone fa-2x"></i>
-          <span class="footer_item "> &nbsp;  Telefone: &nbsp;</span>
-          <span><a class="dev-for" href="tel:+55 62 3624-5611">+55 62 3624-5611</a></span>
-        </p>
-
-        <p>
-          <i class="fa fa-mobile-phone fa-3x"></i>
-          <span class="footer_item ">&nbsp;   Celular: &nbsp;</span>
-          <span><a class="dev-for" href="tel:+55 62 98576-1897">+55 62 98576-1897</a></span>
-        </p>
-
-        <p>
-          <i class="fa fa-clock-o fa-2x"></i>
-          <span class="footer_item ">&nbsp;   Horário de Funcionamento:&nbsp; </span><br>
-          <span class="title">Segunda-feira a sexta-feira:</span>
-          <span>de 6:00hs às 20:00hs</span><br>
-          <span class="title">Sábado:</span>
-          <span>de 6:00hs às 18:00hs</span><br>
-          <span class="title">Domingo e feriádos:</span>
-          <span>de 6:00hs às 12:00hs</span>
-        </p>
-
-        <p>
-          <i class="fa fa-envelope-o fa-2x"></i>
-          <span class="footer_item">&nbsp; E-mail: &nbsp;</span>
-          <span><a class="dev-for" href="mailto:info@demolink.org">contato@barcelonacafe.com.br</a></span>
-        </p>
-
-      </div>
-
-
-    </div>
-
-
-    <div class="clearfix"></div>
-
-
-  </mat-toolbar-row>
-
-  <mat-toolbar-row class="footer-style-2 mat-elevation-z8">
-
-    <div>
-      <a class="dev-for" target="_blank" rel="nofollow"
-         href="https://www.cgctec.com.br">Desenvolvido por CGC Tecnologia</a>
-    </div>
-
-    <span class="site-spacer"></span>
-
-    <div class="pay-group">
-      <ul>
-        <li class="pay_icons" title="Mastercard"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></li>
-        <li class="pay_icons" title="PayPal"><i class="fa fa-cc-paypal" aria-hidden="true"></i></li>
-        <li class="pay_icons" title="Visa"><i class="fa fa-cc-visa" aria-hidden="true"></i></li>
-      </ul>
-    </div>
-
-  </mat-toolbar-row>
-
-</mat-toolbar>
-
+</footer>
 
