--- a/src/app/site/components/main/main.component.scss
+++ b/src/app/site/components/main/main.component.scss
@@ -1,3 +1,15 @@
+@media (min-width: 576px) {
+  .footer_item_links {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  .footer_item_links {
+    display: block;
+  }
+}
+
+
 .site-icon {
   padding: 0 14px;
 }
@@ -27,6 +39,13 @@
 
 .pay-group {
   margin-top: 13px;
+  float: right;
+  margin-right: 20px;
+}
+
+.copy {
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .pay-group li{
@@ -38,8 +57,12 @@
   width: 400px;
 }
 
+.page-footer {
+  padding: 0;
+}
+
 .footer-style-1 {
-  padding-top: 10px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #AA3256;
   color: #FFF;
@@ -58,6 +81,7 @@
   text-transform: uppercase;
   font-size: small;
   font-weight: lighter;
+  text-align: left;
 }
 
 .footer_item_contacts {
@@ -65,6 +89,7 @@
   text-transform: uppercase;
   font-size: medium;
   font-weight: lighter;
+  text-align: left;
 }
 
 .footer_item {
@@ -85,14 +110,14 @@ a.dev-for {
 .input-form {
   border: none;
   background-color: #FFFAE4;
-  width: 400px;
+  width: 380px;
   border-radius: 0;
   color: #AA3256;
   margin-bottom: 0;
 }
 
 .btn-form {
-  width: 400px;
+  width: 380px;
   background-color: darkred;
   border: none;
   border-radius: 0;
@@ -106,7 +131,7 @@ a.dev-for {
 .text-form {
   font-size: 16px;
   display: block;
-  width: 300px;
+  max-width: 300px;
   line-height: 1.3em;
   font-weight: lighter;
   text-align: center;
