Corrigido erro nos Icones das redes sociais

--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -73,8 +73,8 @@
           <ul class="row">
 
             <li class="social_icons">
-              <button mat-mini-fab color="primary" title="Facebook">
-                <mat-icon>
+              <button mat-mini-fab>
+                <mat-icon color="primary" title="Facebook">
                   <a href="https://www.facebook.com/">
                     <i class="fa fa-facebook" aria-hidden="true"></i>
                   </a>
@@ -83,8 +83,8 @@
             </li>
 
             <li class="social_icons">
-              <button mat-mini-fab color="primary" title="Twitter">
-                <mat-icon>
+              <button mat-mini-fab>
+                <mat-icon color="primary" title="Twitter">
                   <a href="https://twitter.com/" target="_blank">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
@@ -93,8 +93,8 @@
             </li>
 
             <li class="social_icons">
-              <button mat-mini-fab color="primary" title="Instagram">
-                <mat-icon>
+              <button mat-mini-fab>
+                <mat-icon color="primary" title="Instagram">
                   <a href="https://www.instagram.com/" target="_blank">
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                   </a>
@@ -103,8 +103,8 @@
             </li>
 
             <li class="social_icons">
-              <button mat-mini-fab color="primary" title="Pinterest">
-                <mat-icon>
+              <button mat-mini-fab>
+                <mat-icon color="primary" title="Pinterest">
                   <a href="https://www.pinterest.com/" target="_blank">
                     <i class="fa fa-pinterest" aria-hidden="true"></i>
                   </a>
@@ -113,8 +113,8 @@
             </li>
 
             <li class="social_icons">
-              <button mat-mini-fab color="primary" title="Youtube">
-                <mat-icon>
+              <button mat-mini-fab>
+                <mat-icon color="primary" title="Youtube">
                   <a href="https://www.youtube.com/" target="_blank">
                     <i class="fa fa-youtube" aria-hidden="true"></i>
                   </a>
@@ -229,7 +229,7 @@
   <div class="footer-style-2 container-fluid">
     <div class="row">
 
-      <div class="copy">
+      <div class="copi">
         <a class="dev-for" target="_blank" rel="nofollow"
            href="https://www.cgctec.com.br">Desenvolvido por CGC Tecnologia</a>
       </div>
