--- a/src/app/site/components/main/main.component.scss
+++ b/src/app/site/components/main/main.component.scss
@@ -9,7 +9,6 @@
   }
 }
 
-
 .site-icon {
   padding: 0 14px;
 }
@@ -43,7 +42,7 @@
   margin-right: 20px;
 }
 
-.copy {
+.copi {
   margin-top: 20px;
   margin-left: 20px;
 }
