Ajuste na cor do Logo e inclusão do botão para scroll up

--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -65,7 +65,7 @@
 
       <div class="col-md-5 mt-md-0 mt-3">
         <a class="footer_logo" href="/">
-          <img src="../../../../assets/img/app/bc_logo_header_footer_02.png" alt="Barcelona Café" width="400" class="img-fluid">
+          <img src="../../../../assets/img/app/bc_logo_header_footer_04.png" alt="Barcelona Café" width="400" class="img-fluid">
         </a>
 
         <div class="social-link">
@@ -248,4 +248,10 @@
   </div>
 
 </footer>
+
+
+<a id="back_top" href="#start">
+  <i mat-mini-fab class="fa fa-angle-up" aria-hidden="true"></i>
+</a>
+
 
