Mais uns ajustes no layout da Landing Page

--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -62,10 +62,10 @@
     <!-- Grid row -->
     <div class="row footer-style-1">
 
-
       <div class="col-md-5 mt-md-0 mt-3">
         <a class="footer_logo" href="/">
-          <img src="../../../../assets/img/app/bc_logo_header_footer_04.png" alt="Barcelona Café" width="400" class="img-fluid">
+          <img src="../../../../assets/img/app/bc_logo_header_footer_04.png" alt="Barcelona Café" width="400"
+               class="img-fluid">
         </a>
 
         <div class="social-link">
@@ -134,7 +134,8 @@
         <div>
           <form>
             <div class="form-group form-margin">
-              <input type="email" class="form-control input-form form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp"
+              <input type="email" class="form-control input-form form-control-sm" id="exampleInputEmail1"
+                     aria-describedby="emailHelp"
                      placeholder="Entre seu email">
             </div>
             <button class="btn-form" mat-button color="primary" size="sm">INSCREVA-SE</button>
@@ -143,80 +144,58 @@
 
       </div>
 
+      <!-- Grid column -->
       <div class="col-md-3 mt-md-0 mt-2">
 
         <div class="footer_item footer_item_links">
-          <h6>INFORMAÇÕES</h6>
 
-          <ul>
-            <li>
-              <a class="dev-for" href="/">Site</a>
-            </li>
-
-            <li>
-              <a class="dev-for" href="#product">Produtos</a>
-            </li>
-
-            <li>
-              <a class="dev-for" href="#about">Sobre nós</a>
-            </li>
-
-            <li>
-              <a class="dev-for" href="#contact">Entre em contato</a>
-            </li>
-
-            <li>
-              <a class="dev-for" href="#search">Procurar</a>
-            </li>
-
-          </ul>
-
+          <!-- Links -->
+          <h6 class="text-uppercase">Horário de Funcionamento</h6>
+          <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; color: #FFFAE4;">
+          <p>
+            <a href="">Segunda-feira a sexta-feira:</a>
+            de 6:00hs às 20:00hs
+          </p>
+          <p>
+            <a href="">Sábado:</a>
+            de 6:00hs às 18:00hs
+          </p>
+          <p>
+            <a href="">Domingo e feriádos:</a>
+            de 6:00hs às 12:00hs
+          </p>
+          <p>
+            <a href="">Entregas</a>
+            de 6:00hs às 12:00hs
+          </p>
         </div>
 
       </div>
 
+      <!-- Grid column -->
       <div class="col-md-4 mt-md-0 mt-2">
 
         <div class="footer_item_contacts">
-          <h6>CONTATOS</h6><br>
-
+          <!-- Links -->
+          <h6 class="text-uppercase">Contato</h6>
+          <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; color: #FFFAE4;">
           <p>
-            <i class="fa fa-address-book-o fa-2x"></i>
-            <span class="footer_item ">&nbsp;  Endereço: &nbsp; </span>
-            <span>Av. Contorno Sul - Quadra 33 - Lote 3 <br><span>Parque Anhanguera</span><br><span>Goiânia - GO</span></span>
+            <mdb-icon icon="home" class="mr-3"></mdb-icon>
+            Av. Contorno Sul - Quadra 33 - Lote 3 - Parque Anhanguera - Goiânia - GO
           </p>
-
           <p>
-            <i class="fa fa-phone fa-2x"></i>
-            <span class="footer_item "> &nbsp;  Telefone: &nbsp;</span>
-            <span><a class="dev-for" href="tel:+55 62 3624-5611">+55 62 3624-5611</a></span>
+            <mdb-icon icon="envelope" class="mr-3"></mdb-icon>
+            contato@barcelonacafe.com.br
           </p>
-
           <p>
-            <i class="fa fa-mobile-phone fa-3x"></i>
-            <span class="footer_item ">&nbsp;   Celular: &nbsp;</span>
-            <span><a class="dev-for" href="tel:+55 62 98576-1897">+55 62 98576-1897</a></span>
+            <mdb-icon icon="phone" class="mr-3"></mdb-icon>
+            +55 62 3624-5611
           </p>
-
           <p>
-            <i class="fa fa-clock-o fa-2x"></i>
-            <span class="footer_item ">&nbsp;   Horário de Funcionamento:&nbsp; </span><br>
-            <span class="title">Segunda-feira a sexta-feira:</span>
-            <span>de 6:00hs às 20:00hs</span><br>
-            <span class="title">Sábado:</span>
-            <span>de 6:00hs às 18:00hs</span><br>
-            <span class="title">Domingo e feriádos:</span>
-            <span>de 6:00hs às 12:00hs</span>
+            <mdb-icon icon="mobile-phone" class="mr-3"></mdb-icon>
+            +55 62 98576-1897
           </p>
-
-          <p>
-            <i class="fa fa-envelope-o fa-2x"></i>
-            <span class="footer_item">&nbsp; E-mail: &nbsp;</span>
-            <span><a class="dev-for" href="mailto:info@demolink.org">contato@barcelonacafe.com.br</a></span>
-          </p>
-
         </div>
-
 
       </div>
 
@@ -250,8 +229,8 @@
 </footer>
 
 
-<a id="back_top" href="#start">
-  <i mat-mini-fab class="fa fa-angle-up" aria-hidden="true"></i>
+<a id="back_top" href="/">
+  <i class="fa fa-angle-up" aria-hidden="true"></i>
 </a>
 
 
