--- a/src/app/site/components/main/main.component.scss
+++ b/src/app/site/components/main/main.component.scss
@@ -81,15 +81,13 @@
 
 .footer_item_links {
   color: #FFFAE4;
-  text-transform: uppercase;
-  font-size: small;
+  font-size: medium;
   font-weight: lighter;
   text-align: left;
 }
 
 .footer_item_contacts {
   color: #FFFAE4;
-  text-transform: uppercase;
   font-size: medium;
   font-weight: lighter;
   text-align: left;
@@ -97,11 +95,6 @@
 
 .footer_item {
   font-size: medium;
-  font-weight: normal;
-}
-
-a.footer_item_links {
-  color: #FFFAE4;
   font-weight: normal;
 }
 
