Ajustes no layout responsivo da Landing Page

--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar class="mat-elevation-z6 site-toolbar-height">
 
   <mat-toolbar-row>
-    <img src="../../../../assets/img/app/bc_logo_header_footer_03.png" alt="Barcelona Café">
+    <div class="imglogo"></div>
+<!--    <img src="../../../../assets/img/app/bc_logo_header_footer_03.png" alt="Barcelona Café">-->
     <span class="site-spacer"></span>
     <button mat-mini-fab color="accent" title="Login">
       <mat-icon>
