--- a/src/app/site/components/main/main.component.scss
+++ b/src/app/site/components/main/main.component.scss
@@ -1,12 +1,35 @@
-@media (min-width: 576px) {
+@media (max-width: 575.98px) {
   .footer_item_links {
     display: none;
+  }
+  .imglogo {
+    width: 60px;
+    height: 37px;
+    background: url("../../../../assets/img/app/logo-barcelona-cafe-02.png") no-repeat;
+    background-size: cover;
+  }
+}
+
+@media (min-width: 768px) {
+  .footer_item_links {
+    display: none;
+  }
+  .imglogo {
+    width: 105px;
+    height: 65px;
+    background: url("../../../../assets/img/app/logo-barcelona-cafe-02.png") no-repeat;
   }
 }
 
 @media (min-width: 992px) {
   .footer_item_links {
     display: block;
+  }
+  .imglogo {
+    margin-top: 15px;
+    width: 400px;
+    height: 90px;
+    background: url("../../../../assets/img/app/bc_logo_header_footer_03.png") no-repeat;
   }
 }
 
