--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -2,7 +2,6 @@
 
   <mat-toolbar-row>
     <div class="imglogo"></div>
-<!--    <img src="../../../../assets/img/app/bc_logo_header_footer_03.png" alt="Barcelona Café">-->
     <span class="site-spacer"></span>
     <button mat-mini-fab color="accent" title="Login">
       <mat-icon>
@@ -17,7 +16,7 @@
   <!--First slide-->
   <mdb-carousel-item>
     <div class="view w-100">
-      <img class="d-block w-100" src="../../../../assets/img/app/slide1_2048x811_crop_center.jpg" alt="First slide">
+      <img class="d-block w-100" src="/../../../../assets/img/app/slide1_2048x811_crop_center.jpg" alt="First slide">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
@@ -29,7 +28,7 @@
   <!--Second slide-->
   <mdb-carousel-item>
     <div class="view w-100">
-      <img class="d-block w-100" src="../../../../assets/img/app/slide2_2048x811_crop_center.jpg" alt="Second slide">
+      <img class="d-block w-100" src="/../../../../assets/img/app/slide2_2048x811_crop_center.jpg" alt="Second slide">
       <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
@@ -43,7 +42,7 @@
   <!--Third slide-->
   <mdb-carousel-item>
     <div class="view w-100">
-      <img class="d-block w-100" src="../../../../assets/img/app/slide3_2048x811_crop_center.jpg" alt="Third slide">
+      <img class="d-block w-100" src="/../../../../assets/img/app/slide3_2048x811_crop_center.jpg" alt="Third slide">
       <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
     </div>
     <div class="carousel-caption">
@@ -65,7 +64,7 @@
 
       <div class="col-md-5 mt-md-0 mt-3">
         <a class="footer_logo" href="/">
-          <img src="../../../../assets/img/app/bc_logo_header_footer_04.png" alt="Barcelona Café" width="400"
+          <img src="/../../../../assets/img/app/bc_logo_header_footer_04.png" alt="Barcelona Café" width="400"
                class="img-fluid">
         </a>
 
