Draft da Landing Page pronto

--- a/src/app/site/components/main/main.component.scss
+++ b/src/app/site/components/main/main.component.scss
@@ -377,6 +377,10 @@ a.dev-for {
   margin-left: 40px;
 }
 
+.navbar.navbar-light .navbar-toggler {
+  color: #CCC;
+}
+
 #back_top {
   width: 40px;
   height: 40px;
