--- a/src/app/site/components/main/main.component.html
+++ b/src/app/site/components/main/main.component.html
@@ -1,18 +1,55 @@
-<mat-toolbar class="mat-elevation-z6 site-toolbar-height">
+
+<!--<mat-toolbar class="mat-elevation-z6 site-toolbar-height">
 
   <mat-toolbar-row>
     <div class="imglogo"></div>
     <span class="site-spacer"></span>
-    <button mat-mini-fab color="accent" title="Login">
-      <mat-icon>
-        input
-      </mat-icon>
-    </button>
+    &lt;!&ndash; Collapsible content &ndash;&gt;
+    <nav class="nav grey lighten-4 py-4">
+      <a class="nav-link active" href="#">Active</a>
+      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link disabled" href="#">Disabled</a>
+    </nav>
   </mat-toolbar-row>
 
-</mat-toolbar>
+</mat-toolbar>-->
+
+<!-- Just an image -->
+<mdb-navbar SideClass="navbar navbar-light navbar-expand-xl yellow lighten-5">
+  <mdb-navbar-brand>
+    <a class="navbar-brand" href="#">
+      <div class="imglogo"></div>
+    </a>
+  </mdb-navbar-brand>
+
+  <!-- Collapsible content -->
+  <links>
+
+    <!-- Links -->
+
+    <!-- Links -->
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active" routerLinkActive="active">
+        <a href="#site" class="nav-link waves-light" mdbWavesEffect>Site<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a href="#products"  class="nav-link waves-light" mdbWavesEffect>Produtos</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a href="#about"  class="nav-link waves-light" mdbWavesEffect>Sobre nós</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a href="#contact"  class="nav-link waves-light" mdbWavesEffect>Entre em contato</a>
+      </li>
+    </ul>
+      <!-- Links -->
+
+  </links>
+
+</mdb-navbar>
 <!--Carousel Wrapper-->
-<mdb-carousel [isControls]="true" class="carousel slide carousel-fade" [animation]="'fade'">
+<mdb-carousel id="site" [isControls]="true" class="carousel slide carousel-fade" [animation]="'fade'">
   <!--First slide-->
   <mdb-carousel-item>
     <div class="view w-100">
@@ -53,6 +90,119 @@
   <!--/Third slide-->
 </mdb-carousel>
 <!--/.Carousel Wrapper-->
+<section id="products" style="padding-top: 6vh;">
+
+  <div id="shopify-section-template-collection" class="shopify-section section_template section_template__collection">
+
+    <div class="container">
+      <h1 class="page_heading">Produtos</h1>
+    </div>
+
+    <div class="container">
+
+      <div class="button_filters">
+        <ul>
+          <li class="active">
+            <a href="">All</a>
+          </li>
+
+          <li>
+            <a href="" title="Chocolate Dipped Cookies">Bolinhos mergulhados de chocolate</a>
+          </li>
+
+          <li>
+            <a href="" title="Colored Sprinkle Cookies">Bolinhos coloridos e polvilhados</a>
+          </li>
+
+          <li>
+            <a href="" title="Raspberry Hamantashen">Hamantashen de framboesa</a>
+          </li>
+
+          <li>
+            <a href="" title="Ready-made Decorations">Decorações prontas</a>
+          </li>
+
+          <li>
+            <a href="" title="Vanilla Cookies">Bolinhos de Baunilha</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+
+  </div>
+
+</section>
+
+<div>
+  <div class="view w-100">
+    <img class="d-block w-100" src="/../../../../assets/img/app/parallax1_2048x1054_crop_center.jpg" alt="First slide">
+    <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
+  </div>
+  <div class="carousel-caption1">
+    <h3 class="h3-responsive">Bolos de dar água na boca</h3>
+    <p>Por encomenda.</p>
+  </div>
+</div>
+
+
+<section id="about" style="padding-top: 6vh;">
+
+  <div id="shopify-section-template-about-us" class="shopify-section section section_template section_template__about">
+    <div class="container">
+
+      <h1 class="page_heading">Sobre nós</h1>
+
+      <div class="page_content">
+
+        <div class="page_content__block page_content__text">
+
+          <h2 class="block_title">Atendendo às suas necessidades, cuidando das suas necessidades com cuidado.</h2>
+
+          <div class="block_content rte">
+            <p>
+              Nossa loja é mais do que apenas outro varejista on-line médio. Nós vendemos não apenas produtos de alta
+              qualidade, mas também oferecemos aos nossos clientes uma experiência positiva de compras on-line. Esqueça
+              se esforçar para fazer tudo de uma vez: cuidar da família, administrar o seu negócio, passear com o
+              cachorro, limpar a casa, fazer compras, etc. Compre os bens que você precisa todos os dias ou simplesmente
+              em alguns cliques ou toques, dependendo do dispositivo que você usa para acessar a Internet. Nós
+              trabalhamos para tornar sua vida mais agradável.
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<div>
+  <div class="view w-100">
+    <img class="d-block w-100" src="/../../../../assets/img/app/mt-1408-home-parallax3.jpg" alt="First slide">
+    <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
+  </div>
+  <div class="carousel-caption2">
+    <h3 class="h3-responsive">O almoço caseiro como você gosta</h3>
+    <p>Entrgamos em sua casa.</p>
+  </div>
+</div>
+
+<section id="contact" style="padding-top: 6vh;">
+
+  <div class="template_contact">
+    <div class="container">
+      <h1 class="page_heading">Entre em contato</h1>
+
+      <div class="rte">
+        Você pode nos contatar de qualquer maneira que seja conveniente para você. Estamos disponíveis email ou telefone. Você também pode usar um formulário de contato rápido abaixo ou visitar nossa loja pessoalmente. Envie-nos um e-mail com dúvidas ou perguntas. Nós ficaríamos felizes em responder-lhe.
+      </div>
+
+    </div>
+  </div>
+
+</section>
+
 <!-- Footer -->
 <footer class="page-footer">
 
